# toka

./: .gitignore  AGENTS.md  README.md  TODO.md  index.html  package-lock.json  package.json  skills-lock.json  vite.config.ts  wdio.conf.ts  wdio.live.conf.ts  wdio.native.conf.ts  wdio.plocate.conf.ts
.github/workflows/: ci.yml
design/: .thumbnail  Toka Style Guide.dc.html  Video Search Player Icon.dc.html  _toka_body.txt
docs/: development.md  linux-quick-start.md  macos-quick-start.md  thumbnails.md
scripts/: test-all.sh
src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  player_linux.rs  providers.rs  search.rs  subtitles.rs
src/test/: setup.ts
test/fixtures/: sample1.en.srt
test/integration/: fixture-server.ts  fullscreen.spec.ts  happy-path.spec.ts  live-provider.spec.ts  native-playback.spec.ts  player-controls.spec.ts  plocate-provider.spec.ts  subtitles.spec.ts
