[package]
name = "toka"
version = "0.1.0"
description = "Toka media player and organizer"
authors = ["Toka contributors"]
edition = "2021"

[lib]
name = "toka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
webdriver = []
e2e = ["webdriver"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libloading = "0.7"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-wdio = "1"
tauri-plugin-wdio-webdriver = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[dev-dependencies]
tempfile = "3"
